# PW_hw6

./: query_eigth.sql  query_eleven.sql  query_five.sql  query_four.sql  query_ninesql.sql  query_one.sql  query_seven.sql  query_six.sql  query_ten.sql  query_three.sql  query_tvelwe.sql  query_two.sql
hw6/: connect.py  create.py  exemple.py  insert.py  main.py  pyproject.toml  update.py
