[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["OleksandrZahar0vi4 <zaharovich007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^23.3.0"
connect = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
